@@ -1,7 +1,29 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST hidapi-0.8.0_pre20130121.tar.xz 257900 SHA256 70440f658dbf1f840647d0756e230fdfe479fd4980d3ba7b299715b1947a8916 SHA512 6735112cae24c845bf5ec1fc04c1cafc12c31a1ec5f8d560fd8089f1abf9b1f4aca2c027b1103b7154f698334d7f9ee8f5e72eb5571ecce5abf3fe716ca68096 WHIRLPOOL 94a691cbeafedd93ac786202f8acb2e4d1a6433cc379c9f7de792c0e1f881b34339df43289804105511f634b26144720e22377a37f1ac1c202a81907a988c773
 DIST hidapi_0.8.0~rc1+git20140201.3a66d4e+dfsg.orig.tar.bz2 81765 SHA256 770e78bcfafccaaff25fbcf815aa2bee46b369e7f0ed12faa9f9260829b88e9c SHA512 55ab59086622bd4b76b630f6e3a0cb7edb335e736421ad0a9199ac7f2208c8880e1be3ef6ee18ca879f9d3dfdf872b0b0ed998087bc6d4716aada185bcebc1e5 WHIRLPOOL 8a18d8db2ea9b90802124936fe276060c6f890bf571cbc33811a0f026f73a689a426854348d195b2b8ad2aa31243fb2d209dca963f4daf535eb36ab0864035ea
 EBUILD hidapi-0.8.0_pre20130121-r1.ebuild 1723 SHA256 0e9625ebdb2f67550eb58fefdc8d6fa3fa2f294266aeaaf9cf2655ee9dcc7f05 SHA512 ec15eafcd599ca5ca19518b839a651aa3d697d35010e5c98828d0bbea0673452effd1157427d31a7b22bf150c30c321c01b257347dc940085992bb29c2b4c62c WHIRLPOOL 32cb26b7f92d3f034d46fb264eff40804923c0abf990dca791d8c367602e2af2c79b04030f54e7d366b04ca6a8a53197edd1ef7ed3e0ec0c15941fdb487058e5
 EBUILD hidapi-0.8.0_pre20130121.ebuild 1365 SHA256 008f86bc410d8b6d1d171912b8888210ccd158d86895e3d0c6c06de37f8813fe SHA512 21aa6e85a5c778878e1cd8ab3d44ce69a3d02b32e97d477e5a188fc8b45e3aeed9d135d6e91d937630f0a4df832374c80ec05cf365c6f6a32f9516caece859d9 WHIRLPOOL 22153ad4a36f6f518cac8573a37c86e76072075ad11df26da572f82c3e101e8b542cf0907e1876d0f459677c2fa7dd81f9a2627eab7e965702450fd18389a000
-EBUILD hidapi-0.8.0_rc1_p20140201.ebuild 2081 SHA256 3b4b42d65f3d2d82af797cd4fa4c077c8ddd5b1e1057a1601642c868b9528ce6 SHA512 bdd4b28a4ca4e69a2bc5bb67538174ee13d99711438afe1744afbcc378ca1c0d34b34bd3b0ebe39d5231d185b5d0fc70c18a35c44e391395831b87606a064291 WHIRLPOOL 09c612c72ae5c66a657700366f7322a2047e07bc516dcc2335bc1f2c55b45fd5d0e44d4039a233da50d537b48709f41e7e4e4613e41ae97717b770280e5eae11
-MISC ChangeLog 1431 SHA256 066c1fc876716e65cc30bdf3959a4d2d436f8f721c0b2ddb615a1da9bed63f23 SHA512 e624f527c8afbef8dbd3cf8f1585dcdd39eb6a470d84c88defb0fdfb825ad8bc3c714243d0ea05680ee4cc1524d3860726e9e2b4102fc305e1aec6251d140410 WHIRLPOOL ec07b5516990d44c01bb1ee7e6823a3455284533f67c23f16ed5d24a3e1dda355040a18dc64ccb1ed299cbda55aa062e4c2008f28e6b2c8ce5558e276c3c44f2
+EBUILD hidapi-0.8.0_rc1_p20140201.ebuild 2100 SHA256 289d001184074673dc86edea2c62200a0fe57b36ae7b8e7855a99c86afae9770 SHA512 4167662c1f5a8e0d18a7185b32294cb1cc1b2c7cf9dc45028c1832c882acebfef0667b43ea3d6f5683f6bad695b6170f8e224e10261cf18cb9a47c3f668e550c WHIRLPOOL 00db6a892c3389bae40623647808f2bd239279baf9fcdbf7244001de789b37691d69191dbe6fc62cdeaad3ab7dbe9fb7af4104e213054eabc4626e8676363605
+MISC ChangeLog 1579 SHA256 795c980511762966616d50b154b66f6e7b8f558893f97ea70bcebb37a5bdee23 SHA512 a16f15a2d86b76051ae29d65dca036d6a0d8f1f8f96897938e84c2a9058117151904f7105a6c0d3254b9fe6df601b48cb3402fd95659b51aa23df491a62ab145 WHIRLPOOL cc18390b1401320269e6d19721fec7ce8b3dd92bfa9e32983b026442dd89f8cac7e6da3de05f22a25bbf47607b39a7e1a98c0d6a07e5b618731d9cfb860f3ec9
 MISC metadata.xml 374 SHA256 5098edf30adee84f59968d5b6c45adcfa410a32001905dea9c093a5ce74a44b3 SHA512 4315e762ca8061694dd652ddcd1a9f9f4b51a06126207c644a52557fb977b94eda2bea826f326763f99cd7da5e813fd07251d039bece31fc13f8686d7113cea2 WHIRLPOOL a629000079acf2866848adb5f66496970dc515badbd9e624437ea89d06d7a7f106ac50a22eeefaac28012667f86d5938c8e4ebba3df837c70763b93e3e239b6e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQJ8BAEBCABmBQJUeuPVXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOepYP/A8s3CdB2ehiHHrZ/tRrD+Py
+VZR3BnfX/MJtNUcDSGxrDOopeJdKUesRH8cpsIZKSssrKr5uXWfLLXGRlX92222M
+ir31ApDHD8m8uD97piczgkk4bJonMCEMZvtG13nDARHkPhZx0Prgl6nc1xmPxYdE
+3ot/9JzAjmNZkthkWnnQc6O8vPIhqlFClbxnzw6Pfb3C0HV+VvIC31Iu0FCHwymF
+Uoz7Iqw7T6dEEGegJ0RrkdAj7TbGVbwgmdeQz1hC1a8jWmR2Z/h6yexXeW3IQ/U1
+IbBceNk4zqJCKW7h+bRU/lS0HGd3HeLCyamI8FncXEsT1oWF1yu5F4RfwLb78daa
+IQ2HNoTxGiFqC9IYlyaimI+uO9pwdm/oAAjS38zP8bhxwXd3iNpvPJUXo7VSj3MR
+ZYJXqb8AHntCcOK7g6g7GHKH1BwAQZs37OAshP3YDlG8UKZX2wM4V+kiEJFaqc0F
+n9YRqtwPmp+T5Vf6ilbIYhKWmknLajsjLb8pJ2FTpGaqF9Ye10DNk0oZbmCpbbB4
+nBULhNjznCKit4jGAI4qmv54iFwwI6L3BuYf1UId+VuS1K8YO7/tl+uuyGAzDTHT
+9qHmK12Q8PnvSWPa1wht3VX/Ri0jtl3g7OlqbgCk/adgDYmee0IgADzZScA5Yc8L
+rTDzGiB/We35t/cAppAs
+=Ro8u
+-----END PGP SIGNATURE-----
