@@ -4,23 +4,15 @@ Hash: SHA256
 DIST dialog-1.2-20140219.tgz 453535 SHA256 ccf07eedf147ac901aff1d984ab63ddd6986b615ddf67435f270d5462ea4ca81 SHA512 9f8fa31db531647a176e67c223198da29e6f9b7c43d8d7b59afbdeab27a9320ed32afe22352b2757732371c4ccc6c1a885f82cef9c635bcfc2f42a20859fca89 WHIRLPOOL ce66b1f4adbe5274dec50cc5bb94bea0da9ffcd16c8d3d0c6482d7172c43b771f67bbe887af2a430c33b9758fa94249bf14e3cdc86690787ca4ea1a633aa20d3
 DIST dialog-1.2-20140911.tgz 455139 SHA256 d054766fba3dac828851f1c9852e5992eb824fd0a0dd26d87ee517242027bafc SHA512 8a6f724fcf0baba1152dcf39d9225eaf720bbec9fb8821cf58ca186852ee6af2f53e904dc998e025a6548b163c63a3ce6a58742252d0bb5c2dc2d0e5c7aaf041 WHIRLPOOL 22821b21820d61ba04a8bad85ce7be757ddb932dd54cb6a179c5bfbbafe1a06e9f2ba02fe298ac957d9a21f63258b48895fe6cab313098bd8a657270423f7370
 EBUILD dialog-1.2.20140219.ebuild 1433 SHA256 50f6569eca10e026d6addfe41ad480a6c14e8888f3a181e63fdca79f6bd6653f SHA512 3de60a780e3b794829d714336b7c2b360597e505b7e58fe785dbb1b09c879619615252d42e690d6ba577af061329a966b59b0f98cbe8ff1f28f34295cabaf36a WHIRLPOOL 822104746ca0e4c3b242fbf9898059a21da4a401b0bfba3c553ee66cc50203ca30d67a4d23ccc864ea6cee278f3f6da42cb2c5c890f9b167d2b3730ede61f5c1
-EBUILD dialog-1.2.20140911.ebuild 1440 SHA256 dc1d6e1628c68eafd9765a1f7c7cd6e2a8e7e6474589d61e0227d9efeb156c73 SHA512 1672c7f4c86c49105bcc7283690d6cebe7b74cc2cc8c66a26ce2fc37c1cd0bcc30deaccf61d428c64b963368b362f4135e796be5c5a1520dcda8310d3d83695c WHIRLPOOL f73173f02ebd8f67024296703b62f8b1c28a793bea8626d47bca00a04ba5ca19e72b3e221bf08a3c0ba206ed204d3e0bb972cfd33f8aebec922d31b57185c6d4
-MISC ChangeLog 28575 SHA256 faaafa254666937258389c5e45cb38cebaaa601b198d07d2c2b2b9aeb24b591d SHA512 a8e307789c215993e5decb4b8d13d61685bda0bf67226c1910e5dc756302e95cc438966f481a3b201b5902a927c5f2ec2566d2db36e4693df2ab93eaf27603b5 WHIRLPOOL 8d636c8a7a3811b513b3eae89ad7475f12c91ff87c4b60e4a197b483efb3dce85b178c5336112ed726b893699dfc165e94ec47aca72c37632e415cd4defa90dd
+EBUILD dialog-1.2.20140911.ebuild 1443 SHA256 11f562e8409dc1654e128d32520ee7e22b78e226c233bf1a2ce8821b8e273af2 SHA512 1ff2a2fd8056b6bfdda173329d03802251ec9ab15dd3ec9067c4d3f6f46cb096c047631a919dcad59c42c0a964b2ab3a060d9f8fee3b32e3edae906c0072548f WHIRLPOOL bc7f3cb5bfa8f2f468c4f44904a791a2a1a984934b542ede7194c7954a92701e3b7db559140068f64681e3ccc998383bf6d7ac0b385c7007bd3fbcafeef9ac8b
+MISC ChangeLog 28687 SHA256 e4ab983b75fede4219685d098fb9cceb1bff69c18f0274fb02655285a23c2227 SHA512 77658329c184f0c787c18a6531664597325745b2bf2f77939e848dc7c0f4b602ef72526a81d58bc0c682ecce1df15a0c898ee181447a3d282da3c9e7d4ef9fde WHIRLPOOL ae8f07ce3967994954f4ca7f3bbe30f6f0e95d63e95a871ed373dc248b70026f76f9644026fff470083955510f33a950100e51b0efc357033bf4027d93067a66
 MISC metadata.xml 251 SHA256 f842d1d78c5ed9053d1950eac622d8ac9959eac325d053853db5e34b4c7f7cef SHA512 77489d4f810fbcf87c48942ed05e96324e7c37f9cc5d4de1394b7e63005e9406b8c9cb475ef3ad4e02a013e6605a9b1c2daa58821cd0d70f4a2541e5018f7655 WHIRLPOOL 7be4a3a49cdfb2f4d716996155bca66255682b7a1485824bd3645143a00b0bb6b86ebb0ee6edac4ae22f06aac87edc94a260279337b8302e7153289e8cb5700a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUda4EAAoJELp701BxlEWf5ioQAImyTc4FiePNjCb1RxucVFSf
-T6rzgRnZcUFJvXKJYFkgyyvzMsfmMHou9eGTxySTL2ayqiAxFbubrGBDIgME8xII
-T9DCKDksYhqfJZtSda0fmABoJDPA0PliXYoIUZBdIjdrmIbklEAgeXKgZrTkSzD8
-56VnUFmmh2Sjk07n2G8LaAXSkd8A3kuennmDTNWyO+o4M4XuSlxcTWEWCAgYU/Qf
-9Fv/5H7GJssXEEeS31cnKUkfTihRnxuJepc9Vn2YB8X2dvlWU67yd0F7XXpQ2mDe
-2PxrCLQCVBb4pd/WEYJCM7lMcWhnnBrwHC0okXaU2N8g9XZC9PIlHiYXbh/KsSoM
-Q5aCHm15HHAyUkUAp4ulDsKZPtAMLx4FwwyGQvoHUz+r3rK6CZ3zrgelkd3hK8Yn
-pifwT46fFNPeIy1HTtuH+n2dKnkHZ8Eq6W9WY3h9dtAFXyniT9ZBzj/YizZIt/uO
-yhyPTEb75/oj+19l491tfN3mqWVkCD4Iq1vlLV1qcjH+9GssrFuuZ+Ut24t+5+o5
-XG6KOc8tDYjr4Ub0iODVpxhRVVYR4aP2Ncog6UDYLMFZs1EJLHLlBwNkvutxr0JY
-U2xgwMojw5tXsqgtT7v5gLRXjZZLaOEpnHuSMmK2D5DFCtnf/gcnjEegm3DjOZPu
-Q+vU43mmQNs3im/ehbuu
-=/+1G
+iJwEAQEIAAYFAlR64hsACgkQG9wOWsQutdYJ8gQAv5Gz17yEOJsb07MEPNnaZ3Fz
+H9PTaBD9DXFR5DpygNyGb5nWbFUs2yxxJyLPf7z0siFrP7HaPENoVz+gwFMno26l
+iiiUAM+gAHjHeIbiXXDEuPIblYNFWCNl1Qu68za7j/ROpuAINvkSt6n6XXO4ftBW
+PQ5L1WJRkkV2+Dq/taQ=
+=+7Lh
 -----END PGP SIGNATURE-----
