@@ -10,4 +10,4 @@ RDEPEND=virtual/libusb:1[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_
 SLOT=0
 SRC_URI=mirror://debian/pool/main/h/hidapi/hidapi_0.8.0~rc1+git20140201.3a66d4e+dfsg.orig.tar.bz2
 _eclasses_=autotools	c118b9a8e93bfef124f2d7a2fe56a95e	autotools-multilib	037c4046d25f29e78dd44dccabd5d66b	autotools-utils	3727db64c7b960903d5033280f108080	eutils	6faef4c127028ccbba3a11400d24ae34	libtool	52d0e17251d04645ffaa61bfdd858944	multibuild	ddc59d206214ef1c240093e1bb2513cf	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multilib-build	9eb4b5fb858228316d8bb32ada51f6a5	multilib-minimal	5bbdc77877c1aa3c6bd89ca3f9196d11	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=c5472c9ace3fdb4344b1533bf381e880
+_md5_=8a12cda118875262bd5ad77016237f35
