@@ -4,10 +4,10 @@ DESCRIPTION=tool to display dialog boxes from a shell
 EAPI=5
 HOMEPAGE=http://invisible-island.net/dialog/dialog.html
 IUSE=examples minimal nls static-libs unicode
-KEYWORDS=~alpha amd64 ~arm ~arm64 hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd
+KEYWORDS=~alpha amd64 ~arm ~arm64 hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd
 LICENSE=GPL-2
 RDEPEND=>=sys-libs/ncurses-5.2-r5[unicode?]
 SLOT=0
 SRC_URI=ftp://invisible-island.net/dialog/dialog-1.2-20140911.tgz
 _eclasses_=eutils	6faef4c127028ccbba3a11400d24ae34	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=f8b1503c29395950f58d06f411d6d72c
+_md5_=bfe2199707266c0dd11b03eb27676d59
