@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/dialog
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/dialog/ChangeLog,v 1.215 2014/11/26 10:40:03 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/dialog/ChangeLog,v 1.216 2014/11/30 09:25:05 zlogene Exp $
+
+  30 Nov 2014; Mikle Kolyada <zlogene@gentoo.org> dialog-1.2.20140911.ebuild:
+  x86 stable wrt bug #530244
 
   26 Nov 2014; Agostino Sarubbo <ago@gentoo.org> dialog-1.2.20140911.ebuild:
   Stable for amd64, wrt bug #530244
